fixed a bug with updating zipcode int32 to foalt64 #32
